# res://src/ui/quests/QuestJournalUI.gd
extends Control

## Interface minimale du journal de quÃªtes
## Affiche les quÃªtes actives avec progression

# ========================================
# NODES
# ========================================

@onready var quest_list: VBoxContainer = %QuestList
@onready var no_quests_label: Label = %NoQuestsLabel
@onready var close_button: Button = %CloseButton

func refresh_display() -> void:
    # Vider la liste
    for child in quest_list.get_children():
        child.queue_free()
    
    # Afficher quÃªtes disponibles
    for quest in QuestPool.get_available_quests():
        var button := Button.new()
        button.text = quest.template.title
        button.pressed.connect(_on_quest_selected.bind(quest))
        quest_list.add_child(button)

func _on_quest_selected(quest: QuestInstance) -> void:
    # Activer la quÃªte
    QuestPool.activate_quest(quest)
    refresh_display()

func _on_pool_refreshed(_quests: Array[QuestInstance]) -> void:
    refresh_display()

# ========================================
# TEMPLATES
# ========================================

const QUEST_ENTRY_SCENE := preload("res://scenes/QuestEntryUI.tscn")

# ========================================
# LIFECYCLE
# ========================================

func _ready() -> void:
    print("ğŸ”µ QuestJournalUI _ready() appelÃ©")
    close_button.pressed.connect(_on_close_pressed)
    hide()
    
    
    QuestPool.pool_refreshed.connect(_on_pool_refreshed)
    refresh_display()
    
    # Connecter aux signaux du QuestManager
    QuestManager.quest_started.connect(_on_quest_changed)
    QuestManager.quest_completed.connect(_on_quest_changed)
    QuestManager.quest_failed.connect(_on_quest_changed)
    QuestManager.quest_expired.connect(_on_quest_changed)
    QuestManager.quest_progress_updated.connect(_on_progress_updated)

func _unhandled_input(event: InputEvent) -> void:
    # Ouvrir/fermer avec J
    if event.is_action_pressed("toggle_journal"):
        print("ğŸŸ¢ Input J capturÃ© ! Appel toggle()")
        toggle()
        get_viewport().set_input_as_handled()
        print("ğŸŸ¢ Input handled")

# ========================================
# AFFICHAGE
# ========================================

func toggle() -> void:
    """Bascule l'affichage du journal"""
    print("ğŸŸ¡ toggle() appelÃ©. visible AVANT:", visible)
    visible = not visible
    print("ğŸŸ¡ toggle() - visible APRÃˆS:", visible)
    
    if visible:
        print("ğŸŸ¡ Journal maintenant visible, appel refresh()")
        refresh()
    else:
        print("ğŸŸ¡ Journal maintenant cachÃ©")

func refresh() -> void:
    """RafraÃ®chit l'affichage de toutes les quÃªtes"""
    print("ğŸŸ  refresh() appelÃ©")
    _clear_list()
    
    var active_quests := QuestManager.get_active_quests()
    print("ğŸŸ  Nombre de quÃªtes actives:", active_quests.size())
    
    if active_quests.is_empty():
        print("ğŸŸ  Aucune quÃªte, affichage label")
        no_quests_label.show()
        return
    
    no_quests_label.hide()
    
    # Trier par tier
    active_quests.sort_custom(_sort_by_tier)
    
    # CrÃ©er les entrÃ©es
    for quest in active_quests:
        print("ğŸŸ  CrÃ©ation entrÃ©e pour:", quest.template.title)
        _create_quest_entry(quest)

func _clear_list() -> void:
    """Vide la liste"""
    for child in quest_list.get_children():
        child.queue_free()

func _create_quest_entry(quest: QuestInstance) -> void:
    """CrÃ©e une entrÃ©e de quÃªte"""
    print("ğŸ”´ _create_quest_entry() pour:", quest.template.title)
    var entry := QUEST_ENTRY_SCENE.instantiate()
    quest_list.add_child(entry)
    entry.setup(quest)
    print("ğŸ”´ EntrÃ©e crÃ©Ã©e et ajoutÃ©e")

func _sort_by_tier(a: QuestInstance, b: QuestInstance) -> bool:
    """Tri par tier dÃ©croissant"""
    return a.template.tier > b.template.tier

# ========================================
# CALLBACKS
# ========================================

func _on_quest_changed(_quest: QuestInstance) -> void:
    """QuÃªte ajoutÃ©e/supprimÃ©e"""
    if visible:
        refresh()

func _on_progress_updated(_quest: QuestInstance, _progress: int, _total: int) -> void:
    """Progression mise Ã  jour"""
    if visible:
        refresh()

func _on_close_pressed() -> void:
    """Bouton fermer"""
    print("ğŸ”µ Bouton fermer cliquÃ©")
    hide()
